BUILT_SOURCES = \
	stock_addressbook.h \
	stock_attach.h \
	stock_delete.h \
	stock_delete_16.h \
	stock_hand-signed.h \
	stock_inbox.h \
	stock_insert-file.h \
	stock_mail-compose.h \
	stock_mail-compose_16.h \
	stock_mail-forward.h \
	stock_mail-receive.h \
	stock_mail-reply-to-all.h \
	stock_mail-reply.h \
	stock_mail-send.h \
	stock_mail.h \
	stock_mail_receive_all.h \
	stock_mail_send_queue.h \
	stock_outbox.h \
	stock_person.h \
	stock_book.h \
	stock_spam.h \
	stock_spam_16.h \
	stock_notspam.h \
	stock_sylpheed.h \
	stock_sylpheed_16.h \
	stock_sylpheed_32.h \
	stock_sylpheed_newmail.h \
	stock_sylpheed_newmail_16.h \
	sylpheed-logo.h \
	folder-close.h \
	folder-open.h \
	folder-noselect.h \
	folder-search.h \
	group.h \
	html.h

EXTRA_DIST = \
	stock_addressbook.png \
	stock_attach.png \
	stock_delete.png \
	stock_delete_16.png \
	stock_hand-signed.png \
	stock_inbox.png \
	stock_insert-file.png \
	stock_mail-compose.png \
	stock_mail-compose_16.png \
	stock_mail-forward.png \
	stock_mail-receive.png \
	stock_mail-reply-to-all.png \
	stock_mail-reply.png \
	stock_mail-send.png \
	stock_mail.png \
	stock_mail_receive_all.png \
	stock_mail_send_queue.png \
	stock_outbox.png \
	stock_person.png \
	stock_book.png \
	stock_spam.png \
	stock_spam_16.png \
	stock_notspam.png \
	stock_sylpheed.png \
	stock_sylpheed_16.png \
	stock_sylpheed_32.png \
	stock_sylpheed_newmail.png \
	stock_sylpheed_newmail_16.png \
	sylpheed-logo.png \
	folder-close.png \
	folder-open.png \
	folder-noselect.png \
	folder-search.png \
	group.png \
	html.png \
	clip.xpm \
	deleted.xpm \
	forwarded.xpm \
	mark.xpm \
	new.xpm \
	offline.xpm \
	online.xpm \
	replied.xpm \
	unread.xpm \
	linewrap.xpm \
	continue.xpm \
	complete.xpm \
	error.xpm \
	address.xpm \
	book.xpm \
	category.xpm \
	interface.xpm \
	jpilot.xpm \
	ldap.xpm \
	vcard.xpm \
	mail.xpm \
	sylpheed.ico \
	$(BUILT_SOURCES)

%.h: %.png
	gdk-pixbuf-csource --name=`echo $(*F)|sed s/-/_/g` $< > $@
